feat: Add Protocol Foundry application with weapon assembly UI and protocol editor.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
         "skipLibCheck": true,
         "noEmit": true,
         "baseUrl": ".",
+        "types": [
+            "node"
+        ],
         "paths": {
             "@renderer/*": [
                 "src/renderer/src/*"
