--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "out/main/index.js",
   "scripts": {
-    "dev": "electron-vite dev",
+    "dev": "set CHOKIDAR_USEPOLLING=true && electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview"
   },
