--- a/protocol-foundry/package.json
+++ b/protocol-foundry/package.json
@@ -18,6 +18,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/earcut": "^3.0.0",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -34,6 +35,7 @@
     "zustand": "^5.0.8"
   },
   "dependencies": {
+    "earcut": "^3.0.2",
     "monaco-editor": "^0.54.0"
   }
 }
