--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "electron-vite": "^4.0.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.2"
+  },
+  "dependencies": {
+    "recast-detour": "^1.6.4"
   }
 }
